--- a/app/src/main/res/layout/activity_engine.xml
+++ b/app/src/main/res/layout/activity_engine.xml
@@ -1,6 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -8,11 +6,8 @@
     >
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/engine_title"
-        android:textStyle="bold" />
+        style="@style/titleTextViewStyle"
+        android:text="@string/engine_title"/>
 
     <ScrollView
         android:id="@+id/login_form"
