--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -9,12 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/car_title"
-        android:textSize="@dimen/title_text_size"
-        android:textStyle="bold" />
+        style="@style/titleTextViewStyle"
+        android:text="@string/car_title"/>
 
     <LinearLayout
         android:id="@+id/spinner"
@@ -31,9 +27,7 @@
 
         <Spinner
             android:id="@+id/car_number_spinner"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/car_spinner_prompt" />
+            style="@style/spinnerTheme" />
 
     </LinearLayout>
 
