--- a/app/src/main/res/layout/activity_day_check_confirm.xml
+++ b/app/src/main/res/layout/activity_day_check_confirm.xml
@@ -9,12 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/day_check_confirm_title"
-        android:textSize="@dimen/title_text_size"
-        android:textStyle="bold" />
+        style="@style/titleTextViewStyle"
+        android:text="@string/day_check_confirm_title"/>
 
     <ScrollView
         android:layout_width="match_parent"
