--- a/app/src/main/res/layout/activity_day_check_start.xml
+++ b/app/src/main/res/layout/activity_day_check_start.xml
@@ -1,6 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
@@ -11,12 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/day_check_start_title"
-        android:textSize="@dimen/title_text_size"
-        android:textStyle="bold" />
+        style="@style/titleTextViewStyle"
+        android:text="@string/day_check_start_title"/>
 
     <ScrollView
         android:layout_width="match_parent"
