--- a/app/src/main/res/layout/activity_health_status_reg.xml
+++ b/app/src/main/res/layout/activity_health_status_reg.xml
@@ -5,9 +5,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/titleTextViewStyle"
         android:text="@string/health_status_reg_title" />
 
     <ScrollView
