--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,11 +7,8 @@
   >
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login_title"
-        android:textStyle="bold"/>
+        style="@style/titleTextViewStyle"
+        android:text="@string/login_title"/>
 
     <ScrollView
         android:layout_width="match_parent"
