--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,16 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
 
-    <dimen name="title_text_size">14sp</dimen>
-
-    <dimen name="bottom_button_height">30dp</dimen>
+    <dimen name="text_size">24sp</dimen>
 
     <dimen name="login_text_view_height">40dp</dimen>
-    <dimen name="login_button_height">30dp</dimen>
-
-    <dimen name="menu_button_width">140dp</dimen>
-    <dimen name="menu_button_height">40dp</dimen>
-    <dimen name="menu_button_text_size">20sp</dimen>
 </resources>
