--- a/app/src/main/res/layout/activity_day_check_confirm.xml
+++ b/app/src/main/res/layout/activity_day_check_confirm.xml
@@ -68,7 +68,8 @@
                         style="@style/ListTextViewStyle"
                         android:text="@string/visual_check" />
 
-                    <Button style="@style/ListNoExceptionButtonStyle" />
+                    <ToggleButton
+                        style="@style/ListNeedConfirmOrNotButtonStyle"/>
                 </LinearLayout>
 
                 <View
@@ -84,7 +85,8 @@
                         style="@style/ListTextViewStyle"
                         android:text="@string/system_diag" />
 
-                    <Button style="@style/ListNoExceptionButtonStyle" />
+                    <ToggleButton
+                        style="@style/ListNeedConfirmOrNotButtonStyle"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -110,7 +112,8 @@
                         style="@style/ListTextViewStyle"
                         android:text="@string/visual_check" />
 
-                    <Button style="@style/ListNoExceptionButtonStyle" />
+                    <ToggleButton
+                        style="@style/ListNeedConfirmOrNotButtonStyle"/>
                 </LinearLayout>
 
                 <View
@@ -126,7 +129,9 @@
                         style="@style/ListTextViewStyle"
                         android:text="@string/system_diag" />
 
-                    <Button style="@style/ListNeedConfirmButtonStyle" />
+                    <ToggleButton
+                        style="@style/ListNeedConfirmOrNotButtonStyle"
+                        android:checked="true"/>
                 </LinearLayout>
             </LinearLayout>
 
