--- a/app/src/main/res/layout/activity_health_status_reg.xml
+++ b/app/src/main/res/layout/activity_health_status_reg.xml
@@ -31,8 +31,8 @@
                     style="@style/ListTextViewStyle"
                     android:text="@string/check_fatigue_title"/>
 
-                <Button
-                    style="@style/ListOkButtonStyle" />
+                <ToggleButton
+                    style="@style/ListOkNgButtonStyle" />
             </LinearLayout>
 
             <View
@@ -48,8 +48,8 @@
                     style="@style/ListTextViewStyle"
                     android:text="@string/check_feeling_title" />
 
-                <Button
-                    style="@style/ListOkButtonStyle" />
+                <ToggleButton
+                    style="@style/ListOkNgButtonStyle" />
             </LinearLayout>
 
             <View
@@ -65,8 +65,9 @@
                     style="@style/ListTextViewStyle"
                     android:text="@string/check_intestine_title"/>
 
-                <Button
-                    style="@style/ListNgButtonStyle" />
+                <ToggleButton
+                    style="@style/ListOkNgButtonStyle"
+                    android:checked="true"/>
             </LinearLayout>
 
             <View
@@ -82,8 +83,8 @@
                     style="@style/ListTextViewStyle"
                     android:text="@string/check_drawsiness_title" />
 
-                <Button
-                    style="@style/ListOkButtonStyle" />
+                <ToggleButton
+                    style="@style/ListOkNgButtonStyle" />
             </LinearLayout>
 
             <View
@@ -98,8 +99,9 @@
                     style="@style/ListTextViewStyle"
                     android:text="@string/check_pain_title" />
 
-                <Button
-                    style="@style/ListNgButtonStyle" />
+                <ToggleButton
+                    style="@style/ListOkNgButtonStyle"
+                    android:checked="true"/>
             </LinearLayout>
 
             <View
@@ -115,8 +117,8 @@
                     style="@style/ListTextViewStyle"
                     android:text="@string/check_take_medicine_title"/>
 
-                <Button
-                    style="@style/ListOkButtonStyle" />
+                <ToggleButton
+                    style="@style/ListOkNgButtonStyle" />
             </LinearLayout>
 
             <View
