--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,11 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
     <color name="colorHighlight">#DD0000</color>
+    <color name="colorNormal">#DDDDDD</color>
+
     <color name="colorGray">#999999</color>
     <color name="colorGreen">#97D077</color>
+
 </resources>
