update bottom button

--- a/app/src/main/res/layout/activity_day_check_show.xml
+++ b/app/src/main/res/layout/activity_day_check_show.xml
@@ -9,7 +9,6 @@
         android:text="@string/day_check_show_title"/>
 
     <ScrollView
-        android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
@@ -80,10 +79,7 @@
 
         <Button
             android:id="@+id/menu_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
+            style="@style/bottomButtonStyle"
             android:text="@string/action_menu" />
 
     </LinearLayout>
