--- a/app/src/main/res/layout/activity_call_confirm.xml
+++ b/app/src/main/res/layout/activity_call_confirm.xml
@@ -9,7 +9,6 @@
         android:text="@string/call_confirm_title" />
 
     <ScrollView
-        android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
@@ -101,10 +100,7 @@
 
         <Button
             android:id="@+id/menu_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
+            style="@style/bottomButtonStyle"
             android:text="@string/action_menu" />
 
     </LinearLayout>
