--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -28,7 +28,6 @@
     </LinearLayout>
 
     <ScrollView
-        android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
@@ -66,12 +65,8 @@
 
         <Button
             android:id="@+id/next_button"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:text="@string/action_next"
-            android:textStyle="bold" />
+            style="@style/bottomButtonStyle"
+            android:text="@string/action_next" />
     </LinearLayout>
 
 </LinearLayout>
