--- a/app/src/main/res/layout/activity_engine.xml
+++ b/app/src/main/res/layout/activity_engine.xml
@@ -10,7 +10,6 @@
         android:text="@string/engine_title"/>
 
     <ScrollView
-        android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
@@ -35,17 +34,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:gravity="center_horizontal">
 
         <Button
             android:id="@+id/next_button"
-            style="?android:textAppearanceSmall"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:text="@string/action_next"
-            android:textStyle="bold" />
+            style="@style/bottomButtonStyle"
+            android:text="@string/action_next" />
     </LinearLayout>
 
 </LinearLayout>
