--- a/app/src/main/res/layout/activity_visual_check.xml
+++ b/app/src/main/res/layout/activity_visual_check.xml
@@ -204,23 +204,11 @@
 
         <Button
             android:id="@+id/back_button"
-            style="?android:textAppearanceSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_gravity="left"
-            android:layout_weight="1"
-            android:text="@string/action_back"
-            android:textStyle="bold" />
+            style="@style/backButtonStyle"/>
 
         <Button
             android:id="@+id/next_button"
-            style="?android:textAppearanceSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_gravity="right"
-            android:layout_weight="1"
-            android:text="@string/action_next"
-            android:textStyle="bold" />
+            style="@style/nextButtonStyle"/>
     </LinearLayout>
 
 </LinearLayout>
