--- a/app/src/main/res/layout/activity_vital_sign_measure.xml
+++ b/app/src/main/res/layout/activity_vital_sign_measure.xml
@@ -88,10 +88,7 @@
 
         <Button
             android:id="@+id/next_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
+            style="@style/bottomButtonStyle"
             android:text="@string/action_next" />
     </LinearLayout>
 </LinearLayout>
